# elastic-ai-search-decision-lab

./: CLAUDE.md  README.md  SUMMARY.md  docker-compose.yml  package.json
content/pages/: add-semantic-search-existing-index.md  choose-hybrid-reranking-strategy.md  choose-retrieval-strategy.md  choose-semantic-implementation.md  evaluate-retrieval-quality.md  tune-vector-search.md
data/: judgments.json  page-metadata.json
docs/: mcp.md
reports/: findability-report.json  findability-report.md
skills/relevance-eval/: SKILL.md  pyproject.toml  thresholds.example.json
skills/relevance-eval/examples/: product_search_lab.py
skills/relevance-eval/relevance_eval/: __init__.py  faithfulness.py  harness.py  metrics.py  report.py  thresholds.py
skills/relevance-eval/tests/: test_faithfulness.py  test_harness.py  test_metrics.py  test_report_and_thresholds.py
src/: buildSearchProfile.ts  decisionRouter.ts  elasticsearch.ts  evaluate.ts  indexDocs.ts  metrics.ts  parseMarkdown.ts  search.ts  types.ts
src/mcp/: errors.ts  server.ts  tools.ts
tests/: buildSearchProfile.test.ts  decisionRouter.test.ts  mcp.test.ts  metrics.test.ts  parseMarkdown.test.ts
